--- a/fessasuderChunkyMX.ioc
+++ b/fessasuderChunkyMX.ioc
@@ -9,9 +9,11 @@ Mcu.IP0=ADC
 Mcu.IP1=I2C1
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=TIM14
-Mcu.IPNb=6
+Mcu.IP4=RTC
+Mcu.IP5=SYS
+Mcu.IP6=TIM14
+Mcu.IP7=TIM17
+Mcu.IPNb=8
 Mcu.Name=STM32F070F6Px
 Mcu.Package=TSSOP20
 Mcu.Pin0=PF0-OSC_IN
@@ -21,8 +23,10 @@ Mcu.Pin11=PA9
 Mcu.Pin12=PA10
 Mcu.Pin13=PA13
 Mcu.Pin14=PA14
-Mcu.Pin15=VP_SYS_VS_Systick
-Mcu.Pin16=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin15=VP_RTC_VS_RTC_Activate
+Mcu.Pin16=VP_SYS_VS_Systick
+Mcu.Pin17=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin18=VP_TIM17_VS_ClockSourceINT
 Mcu.Pin2=PA0
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
@@ -31,7 +35,7 @@ Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PA7
-Mcu.PinsNb=17
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F070F6Px
@@ -42,6 +46,7 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.TIM14_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=VSENSE
 PA0.Mode=IN0
@@ -135,7 +140,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC_Init-ADC-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM14_Init-TIM14-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC_Init-ADC-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM14_Init-TIM14-false-HAL-true,6-MX_TIM17_Init-TIM17-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -156,9 +161,17 @@ RCC.VCOOutput2Freq_Value=8000000
 SH.S_TIM14_CH1.0=TIM14_CH1,PWM Generation1 CH1
 SH.S_TIM14_CH1.ConfNb=1
 TIM14.Channel=TIM_CHANNEL_1
-TIM14.IPParameters=Channel
+TIM14.IPParameters=Channel,Period
+TIM14.Period=959
+TIM17.IPParameters=Prescaler,Period
+TIM17.Period=0xFFFF
+TIM17.Prescaler=48000-1
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
+VP_TIM17_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM17_VS_ClockSourceINT.Signal=TIM17_VS_ClockSourceINT
 board=custom
