--- a/fessasuderChunkyMX.ioc
+++ b/fessasuderChunkyMX.ioc
@@ -163,8 +163,9 @@ SH.S_TIM14_CH1.0=TIM14_CH1,PWM Generation1 CH1
 SH.S_TIM14_CH1.ConfNb=1
 TIM14.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM14.Channel=TIM_CHANNEL_1
-TIM14.IPParameters=Channel,Period,AutoReloadPreload
+TIM14.IPParameters=Channel,Period,AutoReloadPreload,Prescaler
 TIM14.Period=999
+TIM14.Prescaler=1
 TIM17.IPParameters=Prescaler,Period
 TIM17.Period=0xFFFF
 TIM17.Prescaler=48000-1
