--- a/fessasuderChunkyMX.ioc
+++ b/fessasuderChunkyMX.ioc
@@ -72,11 +72,11 @@ PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_SWCLK
 PA2.GPIOParameters=GPIO_Label
-PA2.GPIO_Label=MOVINT2
+PA2.GPIO_Label=IRONPRES
 PA2.Locked=true
 PA2.Signal=GPIO_Input
 PA3.GPIOParameters=GPIO_Label
-PA3.GPIO_Label=MOVINT1
+PA3.GPIO_Label=NOTUSED
 PA3.Locked=true
 PA3.Signal=GPIO_Input
 PA4.GPIOParameters=GPIO_Speed,GPIO_Label
@@ -89,7 +89,7 @@ PA5.GPIO_Label=LEDCLK
 PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA6.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA6.GPIO_Label=NOTUSED
+PA6.GPIO_Label=MOVINT1
 PA6.GPIO_PuPd=GPIO_PULLDOWN
 PA6.Locked=true
 PA6.Signal=GPIO_Input
